# HelloC

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ink/bluballz/helloc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/assets/data/: tilemap1.tmp  tileset1.tst
app/src/main/cpp/: common.hpp  game_consts.hpp  helloc.cpp  our_key_codes.hpp
app/src/main/cpp/core/: Renderer.cpp  Renderer.h  anim.cpp  anim.hpp  ascii_to_geom.cpp  ascii_to_geom.hpp  asset_manager.cpp  asset_manager.hpp  audio_manager.cpp  audio_manager.hpp  engine.hpp  indexbuf.cpp  indexbuf.hpp  input_util.cpp  input_util.hpp  int_rect.hpp  jni_util.cpp  jni_util.hpp  joystick-support.hpp  native_engine.cpp  native_engine.hpp  obstacle.cpp  obstacle.hpp  obstacle_generator.cpp  obstacle_generator.hpp  our_shader.cpp  our_shader.hpp  scene_manager.cpp  scene_manager.hpp  sfxman.cpp  sfxman.hpp  shader.cpp  shader.hpp  shape_renderer.cpp  shape_renderer.hpp  simplegeom.hpp  sprite.cpp  sprite.hpp  tex_quad.cpp  tex_quad.hpp  (+10 more)
app/src/main/cpp/data/: alphabet.inl  ascii_art.inl  blurb.inl  cube_geom.inl  our_shader.inl  strings.inl  tunnel_geom.inl
app/src/main/cpp/scenes/: dialog_scene.cpp  dialog_scene.hpp  login_scene.cpp  login_scene.hpp  play_scene.cpp  play_scene.hpp  scene.cpp  scene.hpp  splash_screen_scene.cpp  splash_screen_scene.hpp  title_screen_scene.cpp  title_screen_scene.hpp  ui_scene.cpp  ui_scene.hpp
app/src/main/cpp/world/: tile.hpp  tilemap.cpp  tilemap.hpp  tileset.cpp  tileset.hpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ink/bluballz/helloc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
